fix: add burger menu gap

--- a/shelter/pages/main/style.css
+++ b/shelter/pages/main/style.css
@@ -801,6 +801,8 @@ header .container {
   .nav-list {
     flex-direction: column;
     align-items: center;
+    gap: 42px;
+    margin: 0;
     padding: 248px 39px 0;
   }
 }
@@ -819,6 +821,11 @@ header .container {
 .nav-item .nav-link.active {
   border-bottom: 3px solid #f1cdb3;
   color: #fafafa;
+}
+@media (max-width: 767px) {
+  .nav-item .nav-link.active {
+    padding-bottom: 6px;
+  }
 }
 @media (max-width: 767px) {
   .nav-item .nav-link {
